deleted spaces in img names

--- a/products.html
+++ b/products.html
@@ -98,7 +98,7 @@
                     <div class="card h-100">
                         <a href="#">
                             <img class="card-img-top"
-                                 src="vendor/img/products/Adidas%20hoodie.png"
+                                 src="vendor/img/products/Adidas-hoodie.png"
                                  alt="">
                         </a>
                         <div class="card-body">
@@ -118,7 +118,7 @@
                     <div class="card h-100">
                         <a href="#">
                             <img class="card-img-top"
-                                 src="vendor/img/products/Blue%20jacket%20The%20North%20Face.png" alt="">
+                                 src="vendor/img/products/Blue-jacket-The-North-Face.png" alt="">
                         </a>
                         <div class="card-body">
                             <h4 class="card-title">
@@ -139,7 +139,7 @@
                     <div class="card h-100">
                         <a href="#">
                             <img class="card-img-top"
-                                 src="vendor/img/products/Brown%20sports%20oversized-top%20ASOS%20DESIGN.png"
+                                 src="vendor/img/products/Brown-sports-oversized-top-ASOS-DESIGN.png"
                                  alt="">
                         </a>
                         <div class="card-body">
@@ -159,7 +159,7 @@
                     <div class="card h-100">
                         <a href="#">
                             <img class="card-img-top"
-                                 src="vendor/img/products/Black%20Nike%20Heritage%20backpack.png"
+                                 src="vendor/img/products/Black-Nike-Heritage-backpack.png"
                                  alt="">
                         </a>
                         <div class="card-body">
@@ -179,7 +179,7 @@
                     <div class="card h-100">
                         <a href="#">
                             <img class="card-img-top"
-                                 src="vendor/img/products/Black%20Dr%20Martens%20shoes.png"
+                                 src="vendor/img/products/Black-Dr-Martens-shoes.png"
                                  alt="">
                         </a>
                         <div class="card-body">
@@ -199,7 +199,7 @@
                     <div class="card h-100">
                         <a href="#">
                             <img class="card-img-top"
-                                 src="vendor/img/products/Dark%20blue%20wide-leg%20ASOs%20DESIGN%20trousers.png"
+                                 src="vendor/img/products/Dark-blue-wide-leg-ASOs-DESIGN-trousers.png"
                                  alt="">
                         </a>
                         <div class="card-body">
