--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <a class="nav-link" href="#"><i class="fas fa-shopping-bag"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Войти <i class="fas fa-sign-in-alt"></i></a>
+                    <a class="nav-link" href="auth/login.html">Войти <i class="fas fa-sign-in-alt"></i></a>
                 </li>
             </ul>
         </div>
