--- a/auth/login.html
+++ b/auth/login.html
@@ -24,10 +24,9 @@
                             <div class="card-body">
                                 <form>
                                     <div class="form-group">
-                                        <label class="small mb-1" for="inputEmailAddress">Адрес электронной
-                                            почты</label>
+                                        <label class="small mb-1" for="inputEmailAddress">Имя пользователя</label>
                                         <input class="form-control py-4" id="inputEmailAddress" type="email"
-                                               placeholder="Введите адрес электронной почты"/>
+                                               placeholder="Введите имя пользователя"/>
                                     </div>
                                     <div class="form-group">
                                         <label class="small mb-1" for="inputPassword">Пароль</label>
