--- a/auth/login.html
+++ b/auth/login.html
@@ -34,7 +34,7 @@
                                                placeholder="Введите пароль"/>
                                     </div>
                                     <div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0">
-                                        <a class="small" href="№">Забыли пароль?</a>
+                                        <a class="small" href="#">Забыли пароль?</a>
                                         <a class="btn btn-primary" href="../index.html">Авторизоваться</a>
                                     </div>
                                 </form>
