changed a to input btn

--- a/auth/login.html
+++ b/auth/login.html
@@ -35,7 +35,7 @@
                                     </div>
                                     <div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0">
                                         <a class="small" href="#">Забыли пароль?</a>
-                                        <a class="btn btn-primary" href="../index.html">Авторизоваться</a>
+                                        <input class="btn btn-primary" type="submit" value="Авторизоваться">
                                     </div>
                                 </form>
                             </div>
