added sign out field

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="auth/login.html">Войти <i class="fas fa-sign-in-alt"></i></a>
-                </li>
+<!--                </li><li class="nav-item">-->
+<!--                    <a class="nav-link" href="auth/login.html">Выйти <i class="fas fa-sign-out-alt"></i></a>-->
+<!--                </li>-->
             </ul>
         </div>
     </div>
