added username field for register.html

--- a/auth/register.html
+++ b/auth/register.html
@@ -39,12 +39,20 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="form-group">
-                                        <label class="small mb-1" for="inputEmailAddress">Адрес электронной
-                                            почты</label>
-                                        <input class="form-control py-4" id="inputEmailAddress" type="email"
-                                               aria-describedby="emailHelp"
-                                               placeholder="Введите адрес электронной почты"/>
+                                    <div class="form-row">
+                                        <div class="col-md-6">
+                                            <label class="small mb-1" for="inputUsername">Имя пользователя</label>
+                                            <input class="form-control py-4" id="inputUsername" type="email"
+                                                   aria-describedby="usernameHelp"
+                                                   placeholder="Введите имя пользователя"/>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <label class="small mb-1" for="inputEmailAddress">Адрес электронной
+                                                почты</label>
+                                            <input class="form-control py-4" id="inputEmailAddress" type="email"
+                                                   aria-describedby="emailHelp"
+                                                   placeholder="Введите адрес эл. почты"/>
+                                        </div>
                                     </div>
                                     <div class="form-row">
                                         <div class="col-md-6">
