--- a/auth/register.html
+++ b/auth/register.html
@@ -42,7 +42,7 @@
                                     <div class="form-row">
                                         <div class="col-md-6">
                                             <label class="small mb-1" for="inputUsername">Имя пользователя</label>
-                                            <input class="form-control py-4" id="inputUsername" type="email"
+                                            <input class="form-control py-4" id="inputUsername" type="text"
                                                    aria-describedby="usernameHelp"
                                                    placeholder="Введите имя пользователя"/>
                                         </div>
