--- a/auth/register.html
+++ b/auth/register.html
@@ -71,8 +71,9 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="form-group mt-4 mb-0"><a class="btn btn-primary btn-block"
-                                                                         href="login.html">Создать аккаунт</a></div>
+                                    <div class="form-group mt-4 mb-0">
+                                        <input class="btn btn-primary btn-block" type="submit" value="Создать аккаунт">
+                                    </div>
                                 </form>
                             </div>
                             <div class="card-footer text-center">
