--- a/index.html
+++ b/index.html
@@ -31,10 +31,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="products.html">Каталог</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fas fa-shopping-bag"></i></a>
+                    <a class="nav-link" href="products.html">Каталог <i class="fas fa-shopping-bag"></i></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="auth/login.html">Войти <i class="fas fa-sign-in-alt"></i></a>
