--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                     <a class="nav-link" href="auth/login.html">Войти <i class="fas fa-sign-in-alt"></i></a>
                 </li>
                 <!--                <li class="nav-item">-->
-                <!--                    <a class="nav-link" href="auth/login.html">Валерий П. <i class="fas fa-user-circle"></i></a>-->
+                <!--                    <a class="nav-link" href="#">Валерий П. <i class="fas fa-user-circle"></i></a>-->
                 <!--                </li>-->
                 <!--                <li class="nav-item">-->
-                <!--                    <a class="nav-link" href="auth/login.html">Выйти <i class="fas fa-sign-out-alt"></i></a>-->
+                <!--                    <a class="nav-link" href="#">Выйти <i class="fas fa-sign-out-alt"></i></a>-->
                 <!--                </li>-->
             </ul>
         </div>
