--- a/auth/login.html
+++ b/auth/login.html
@@ -18,6 +18,13 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-5">
+                        <div class="alert alert-warning alert-dismissible fade show" role="alert"
+                             style="margin-top: 50px;">
+                            <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
                         <div class="card shadow-lg border-0 rounded-lg mt-5">
                             <div class="card-header"><h3 class="text-center font-weight-light my-4">Авторизация</h3>
                             </div>
