added edit.html for profile page

--- a/products.html
+++ b/products.html
@@ -130,7 +130,7 @@
                             </p>
                         </div>
                         <div class="card-footer text-center">
-                            <button type="button" class="btn btn-outline-success">Отправить в корзину</button>
+                            <button type="button" class="btn btn-outline-danger">Удалить из корзины</button>
                         </div>
                     </div>
                 </div>
