--- a/auth/profile.html
+++ b/auth/profile.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>GeekShop - Личный кабинет</title>
+    <title>GeekShop - Профиль</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../css/edit.css" rel="stylesheet">
+    <link href="../css/profile.css" rel="stylesheet">
 </head>
 <body class="bg-light">
 <!-- Navigation -->
