--- a/auth/profile.html
+++ b/auth/profile.html
@@ -104,36 +104,19 @@
             <h4 class="mt-3 mb-3 d-flex justify-content-between align-items-center mb-3">
                 Корзина <span class="badge badge-secondary badge-pill">3</span>
             </h4>
-            <ul class="list-group mb-3">
-                <li class="list-group-item d-flex justify-content-between lh-condensed">
-                    <div>
-                        <h6 class="my-0">Product name</h6>
-                        <small class="text-muted">Brief descriptionr</small>
-                    </div>
-                    <span class="text-muted">1
-                        <i class="fas fa-caret-up"></i>
-                        <i class="fas fa-caret-down"></i>
-                    </span>
-                    <span class="text-muted">$12</span>
-                    <span class="text-muted"><i class="fas fa-trash"></i></span>
-                </li>
-                <li class="list-group-item d-flex justify-content-between lh-condensed">
-                    <div>
-                        <h6 class="my-0">Second item</h6>
-                        <small class="text-muted">Brief description</small>
-                    </div>
-                    <span class="text-muted">2
-                        <i class="fas fa-caret-up"></i>
-                        <i class="fas fa-caret-down"></i>
-                    </span>
-                    <span class="text-muted">$10</span>
-                    <span class="text-muted"><i class="fas fa-trash"></i></span>
-                </li>
-                <li class="list-group-item d-flex justify-content-between">
-                    <span>Total (USD)</span>
-                    <strong>$22</strong>
-                </li>
-            </ul>
+            <div class="card mb-3">
+                <div class="card-body">
+                    <h5 class="card-title">Product name</h5>
+                    <p class="card-text">Product description</p>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item d-flex justify-content-between lh-condensed bg-light">
+                        <span class="text-muted">1 шт.</span>
+                        <span class="text-muted">2 390 руб.</span>
+                        <span class="text-muted"><i class="fas fa-trash"></i></span>
+                    </li>
+                </ul>
+            </div>
             <button type="button" class="btn btn-success btn-lg float-right">Оформить</button>
         </div>
     </div>
