added total sum section for basket

--- a/auth/profile.html
+++ b/auth/profile.html
@@ -117,6 +117,12 @@
                     </li>
                 </ul>
             </div>
+            <div class="card mb-3">
+                <div class="card-footer">
+                    <p class="float-left">Итого</p>
+                    <h4 class="float-right">2 390 руб.</h4>
+                </div>
+            </div>
             <button type="button" class="btn btn-success btn-lg float-right">Оформить</button>
         </div>
     </div>
