--- a/index.html
+++ b/index.html
@@ -31,13 +31,16 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="products.html">Каталог <i class="fas fa-shopping-bag"></i></a>
+                    <a class="nav-link" href="products.html">Каталог <i class="fas fa-shopping-bag"></i> </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="auth/login.html">Войти <i class="fas fa-sign-in-alt"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="auth/profile.html">Валерий П. <i class="fas fa-user-circle"></i></a>
+                    <a class="nav-link" href="auth/profile.html">Валерий П.
+                        <i class="fas fa-user-circle"></i>
+                        <span class="badge bg-secondary mb-1">4</span>
+                    </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Выйти <i class="fas fa-sign-out-alt"></i></a>
