added arrow up/down

--- a/auth/profile.html
+++ b/auth/profile.html
@@ -112,6 +112,10 @@
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item d-flex justify-content-between lh-condensed bg-light">
                         <span class="text-muted">1 шт.</span>
+                        <span class="text-muted">
+                            <i class="fas fa-caret-up"></i>
+                            <i class="fas fa-caret-down"></i>
+                        </span>
                         <span class="text-muted">2 390 руб.</span>
                         <span class="text-muted"><i class="fas fa-trash"></i></span>
                     </li>
