added section for AJAX basket

--- a/auth/profile.html
+++ b/auth/profile.html
@@ -110,13 +110,27 @@
                     <p class="card-text">Product description</p>
                 </div>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item d-flex justify-content-between lh-condensed bg-light">
-                        <span class="text-muted">1 шт.</span>
-                        <span class="text-muted">2 390 руб.</span>
-                        <span class="text-muted">
-                            <i class="fas fa-cart-plus"></i>
-                            <i class="fas fa-trash"></i>
-                        </span>
+                    <!--                    <li class="list-group-item d-flex justify-content-between lh-condensed bg-light">-->
+                    <!--                        <span class="text-muted">1 шт.</span>-->
+                    <!--                        <span class="text-muted">2 390 руб.</span>-->
+                    <!--                        <span class="text-muted">-->
+                    <!--                            <i class="fas fa-cart-plus"></i>-->
+                    <!--                            <i class="fas fa-trash"></i>-->
+                    <!--                        </span>-->
+                    <!--                    </li>-->
+                    <li class="list-group-item bg-light">
+                        <div class="row text-center">
+                            <div class="col-lg-4">
+                                <input name="basketID" type="number" class="form-control"
+                                       value="1" min="0">
+                            </div>
+                            <div class="col-lg-4">2 390 руб.</div>
+                            <div class="col-lg-4">
+                                <a href="#">
+                                    <i class="fas fa-trash"></i>
+                                </a>
+                            </div>
+                        </div>
                     </li>
                 </ul>
             </div>
