delete block with info who loged in

--- a/admin/admin-users-read.html
+++ b/admin/admin-users-read.html
@@ -67,10 +67,7 @@
                     </a>
                 </div>
             </div>
-            <div class="sb-sidenav-footer">
-                <div class="small">Logged in as:</div>
-                vokler
-            </div>
+            <div class="sb-sidenav-footer"></div>
         </nav>
     </div>
     <div id="layoutSidenav_content">
@@ -92,7 +89,7 @@
                                     <th>Фамилия</th>
                                     <th>Адрес эл. почты</th>
                                     <th>Персонал сайта</th>
-                                    <th>Суперпользователь</th>
+                                    <th>Активный</th>
                                 </tr>
                                 </thead>
                                 <tfoot>
@@ -102,7 +99,7 @@
                                     <th>Фамилия</th>
                                     <th>Адрес эл. почты</th>
                                     <th>Персонал сайта</th>
-                                    <th>Суперпользователь</th>
+                                    <th>Активный</th>
                                 </tr>
                                 </tfoot>
                                 <tbody>
