--- a/admin/admin.html
+++ b/admin/admin.html
@@ -67,10 +67,7 @@
                     </a>
                 </div>
             </div>
-            <div class="sb-sidenav-footer">
-                <div class="small">Logged in as:</div>
-                vokler
-            </div>
+            <div class="sb-sidenav-footer"></div>
         </nav>
     </div>
     <div id="layoutSidenav_content">
