added links to pages

--- a/admin/admin-users-create.html
+++ b/admin/admin-users-create.html
@@ -17,7 +17,7 @@
 </head>
 <body class="sb-nav-fixed">
 <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">GeekShop</a>
+    <a class="navbar-brand" href="admin.html">GeekShop</a>
     <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#"><i class="fas fa-bars"></i>
     </button>
     <!-- Navbar Search-->
@@ -47,7 +47,7 @@
             <div class="sb-sidenav-menu">
                 <div class="nav">
                     <div class="sb-sidenav-menu-heading">Приложения</div>
-                    <a class="nav-link" href="index.html">
+                    <a class="nav-link" href="admin-users-read.html">
                         <div class="sb-nav-link-icon">
                             <i class="fas fa-users"></i>
                         </div>
