--- a/admin/admin-users-create.html
+++ b/admin/admin-users-create.html
@@ -109,6 +109,18 @@
                         </div>
                     </div>
                     <div class="form-row">
+                        <div class="col-lg-6">
+                            <label class="small mb-1" for="inputPassword1">Пароль</label>
+                            <input class="form-control py-4" id="inputPassword1" type="text"
+                                   aria-describedby="password1Help"/>
+                        </div>
+                        <div class="col-lg-6">
+                            <label class="small mb-1" for="inputPassword2">Повторите пароль</label>
+                            <input class="form-control py-4" id="inputPassword2" type="text"
+                                   aria-describedby="password2Help"/>
+                        </div>
+                    </div>
+                    <div class="form-row">
                         <div class="col-lg-12" style="margin-top: 33px;">
                             <input class="btn btn-info btn-block" type="submit" value="Сохранить">
                         </div>
