--- a/admin/admin-users-update-delete.html
+++ b/admin/admin-users-update-delete.html
@@ -112,14 +112,16 @@
                             </div>
                         </div>
                         <div class="form-row">
-                            <div class="col-lg-6" style="margin-top: 33px;">
+                            <div class="col-lg-12" style="margin-top: 33px;">
                                 <input class="btn btn-info btn-block" type="submit" value="Сохранить">
-                            </div>
-                            <div class="col-lg-6" style="margin-top: 33px;">
-                                <input class="btn btn-danger btn-block" type="submit" value="Удалить">
                             </div>
                         </div>
                     </form>
+                    <div class="row">
+                        <div class="col-lg-12" style="margin-top: 33px;">
+                            <input class="btn btn-danger btn-block" type="submit" value="Удалить">
+                        </div>
+                    </div>
                 </div>
             </div>
         </main>
