added small changes

--- a/admin/admin-users-read.html
+++ b/admin/admin-users-read.html
@@ -122,7 +122,9 @@
                         </div>
                     </div>
                     <div class="card-footer">
-                        <button class="btn btn-success">Создать пользователя</button>
+                        <a href="admin-users-create.html">
+                            <button class="btn btn-success">Создать пользователя</button>
+                        </a>
                     </div>
                 </div>
             </div>
