--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="admin/admin.html">
+                        <i class="fas fa-users-cog"></i>
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="#">Выйти <i class="fas fa-sign-out-alt"></i></a>
                 </li>
             </ul>
