--- a/auth/profile.html
+++ b/auth/profile.html
@@ -25,13 +25,30 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="../products.html">Каталог <i class="fas fa-shopping-bag"></i></a>
+                    <a class="nav-link" href="../products.html">Каталог <i class="fas fa-shopping-bag"></i> </a>
                 </li>
-                <!--                <li class="nav-item">-->
-                <!--                    <a class="nav-link" href="../auth/login.html">Войти <i class="fas fa-sign-in-alt"></i></a>-->
-                <!--                </li>-->
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Валерий П. <i class="fas fa-user-circle"></i></a>
+                    <a class="nav-link" href="../auth/login.html">Войти <i class="fas fa-sign-in-alt"></i></a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                       data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="fas fa-user-circle"></i>
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li>
+                            <a class="dropdown-item" href="profile.html">Профиль</a>
+                        </li>
+                        <li><a class="dropdown-item" href="../orders/orders.html">Заказы</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="#">
+                                Админ-панель
+                            </a>
+                        </li>
+                    </ul>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Выйти <i class="fas fa-sign-out-alt"></i></a>
@@ -127,7 +144,7 @@
                     <h4 class="float-right">2 390 руб.</h4>
                 </div>
             </div>
-            <button type="button" class="btn btn-success btn-lg float-right">Оформить</button>
+            <button type="button" class="btn btn-success btn-lg float-right">Оформить заказ</button>
         </div>
     </div>
 </div>
@@ -135,6 +152,9 @@
 <!-- Bootstrap core JavaScript -->
 <script src="../vendor/jquery/jquery.min.js"></script>
 <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 
 <!-- FontAwesome script -->
 <script src="../vendor/fontawesome/fontawesome-icons.js" crossorigin="anonymous"></script>
