--- a/users/profile.html
+++ b/users/profile.html
@@ -28,7 +28,7 @@
                     <a class="nav-link" href="../products.html">Каталог <i class="fas fa-shopping-bag"></i> </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../auth/login.html">Войти <i class="fas fa-sign-in-alt"></i></a>
+                    <a class="nav-link" href="/login.html">Войти <i class="fas fa-sign-in-alt"></i></a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -144,7 +144,9 @@
                     <h4 class="float-right">2 390 руб.</h4>
                 </div>
             </div>
-            <button type="button" class="btn btn-success btn-lg float-right">Оформить заказ</button>
+            <a class="btn btn-success btn-lg float-right" href="../orders/checkout_order.html">
+                Оформить заказ
+            </a>
         </div>
     </div>
 </div>
