added details to orders.html

--- a/orders/orders.html
+++ b/orders/orders.html
@@ -77,6 +77,7 @@
                         <th scope="col">Статус</th>
                         <th scope="col">Создан</th>
                         <th scope="col">Итого</th>
+                        <th scope="col">Действие</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -85,18 +86,27 @@
                         <td>Оформляется</td>
                         <td>21 авг. 21 года</td>
                         <td>5 070 руб.</td>
+                        <td>
+                            <a href="#">просмотреть</a>
+                        </td>
                     </tr>
                     <tr class="table-success">
                         <th scope="row">2</th>
                         <td>Досталвен</td>
                         <td>16 июля 21 года</td>
                         <td>4 876 руб.</td>
+                        <td>
+                            <a href="#">просмотреть</a>
+                        </td>
                     </tr>
                     <tr class="table-info">
                         <th scope="row">3</th>
                         <td>В пути</td>
                         <td>14 нояб. 21 года</td>
                         <td>9 566 руб.</td>
+                        <td>
+                            <a href="#">просмотреть</a>
+                        </td>
                     </tr>
                     </tbody>
                 </table>
