--- a/orders/orders.html
+++ b/orders/orders.html
@@ -87,7 +87,7 @@
                         <td>21 авг. 21 года</td>
                         <td>5 070 руб.</td>
                         <td>
-                            <a href="#">просмотреть</a>
+                            <a href="order.html">просмотреть</a>
                         </td>
                     </tr>
                     <tr class="table-success">
@@ -96,7 +96,7 @@
                         <td>16 июля 21 года</td>
                         <td>4 876 руб.</td>
                         <td>
-                            <a href="#">просмотреть</a>
+                            <a href="order.html">просмотреть</a>
                         </td>
                     </tr>
                     <tr class="table-info">
@@ -105,7 +105,7 @@
                         <td>14 нояб. 21 года</td>
                         <td>9 566 руб.</td>
                         <td>
-                            <a href="#">просмотреть</a>
+                            <a href="order.html">просмотреть</a>
                         </td>
                     </tr>
                     </tbody>
