--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
 
 <!-- Page Content -->
 <section>
+    <!--    <div class="alert alert-light text-center" role="alert">-->
+    <!--        Информационное сообщение-->
+    <!--    </div>-->
     <div class="container">
         <div class="row">
             <div class="col-lg-6">
