--- a/orders/checkout_order.html
+++ b/orders/checkout_order.html
@@ -81,42 +81,42 @@
                     <li class="list-group-item d-flex justify-content-between lh-sm">
                         <div>
                             <h6 class="my-0">Product name</h6>
-                            <small class="text-muted">Brief description</small>
+                            <small class="text-muted">2 шт.</small>
                         </div>
-                        <span class="text-muted">5 700 руб.</span>
+                        <span class="text-muted">11 400 руб.</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between lh-sm">
                         <div>
                             <h6 class="my-0">Second product</h6>
-                            <small class="text-muted">Brief description</small>
+                            <small class="text-muted">1 шт.</small>
                         </div>
                         <span class="text-muted">3 200 руб.</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between lh-sm">
                         <div>
                             <h6 class="my-0">Third item</h6>
-                            <small class="text-muted">Brief description</small>
+                            <small class="text-muted">3 шт.</small>
                         </div>
-                        <span class="text-muted">4 299 руб.</span>
+                        <span class="text-muted">12 894 руб.</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between">
                         <span>Сумма к оплате</span>
-                        <strong>13 199 руб.</strong>
+                        <strong>27 497 руб.</strong>
                     </li>
                 </ul>
             </div>
             <div class="col-md-7 col-lg-8">
                 <h4 class="mb-3">Адрес доставки</h4>
-                <form class="needs-validation" novalidate>
+                <form>
                     <div class="row g-3">
                         <div class="col-sm-6">
                             <label for="firstName" class="form-label">Имя</label>
-                            <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
+                            <input type="text" class="form-control" id="firstName" placeholder="Иван" value="" required>
                         </div>
 
                         <div class="col-sm-6">
                             <label for="lastName" class="form-label">Фамилия</label>
-                            <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
+                            <input type="text" class="form-control" id="lastName" placeholder="Иванов" value="" required>
                         </div>
 
                         <div class="col-12 mt-3">
