--- a/users/login.html
+++ b/users/login.html
@@ -32,7 +32,7 @@
                                 <form>
                                     <div class="form-group">
                                         <label class="small mb-1" for="inputEmailAddress">Имя пользователя</label>
-                                        <input class="form-control py-4" id="inputEmailAddress" type="email"
+                                        <input class="form-control py-4" id="inputEmailAddress" type="text"
                                                placeholder="Введите имя пользователя"/>
                                     </div>
                                     <div class="form-group">
