--- a/users/email_verification.html
+++ b/users/email_verification.html
@@ -7,7 +7,7 @@
     <meta name="description" content=""/>
     <meta name="author" content=""/>
     <title>GeekShop - Подтверждение электронной почты</title>
-    <link href="../css/auth-admin.css" rel="stylesheet"/>
+    <link href="../vendor/css/auth-admin.css" rel="stylesheet"/>
 </head>
 <body class="bg-primary">
 <div id="layoutAuthentication">
