--- a/users/profile.html
+++ b/users/profile.html
@@ -11,7 +11,7 @@
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../css/profile.css" rel="stylesheet">
+    <link href="../vendor/css/profile.css" rel="stylesheet">
 </head>
 <body class="bg-light">
 <!-- Navigation -->
