--- a/products.html
+++ b/products.html
@@ -14,7 +14,7 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/products.css" rel="stylesheet">
+    <link href="vendor/css/products.css" rel="stylesheet">
 
 </head>
 
