--- a/users/login.html
+++ b/users/login.html
@@ -7,7 +7,7 @@
     <meta name="description" content=""/>
     <meta name="author" content=""/>
     <title>GeekShop - Авторизация</title>
-    <link href="../css/auth-admin.css" rel="stylesheet"/>
+    <link href="../vendor/css/auth-admin.css" rel="stylesheet"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js"
             crossorigin="anonymous"></script>
 </head>
@@ -73,6 +73,6 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
-<script src="../js/auth-admin.js"></script>
+<script src="../vendor/js/auth-admin.js"></script>
 </body>
 </html>
